--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "node-git-api",
   "version": "0.0.0",
   "description": "A node based git api",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "node-git": "./index.js"
   },
   "keywords": [
     "node",
