update bin path

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "node-git-api",
   "version": "0.0.0",
   "description": "A node based git api",
-  "bin": {
-    "node-git": "./index.js"
-  },
+  "bin": "./index.js",
   "keywords": [
     "node",
     "git"
